--- a/static/main/css/styles.css
+++ b/static/main/css/styles.css
@@ -23,26 +23,26 @@
     cursor: pointer;
   }
 
-  ::-webkit-scrollbar {
-    width: 12px;
-    height: 12px;
-  }
-
-  ::-webkit-scrollbar-track {
-    background: black;
-  }
-
-  ::-webkit-scrollbar-thumb {
-    background: var(--greenFull2);
-  }
-
-  ::-webkit-scrollbar-thumb:hover {
-    background: var(--greenFull4);
-  }
-
   section {
     width: 100%;
   }
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: black;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgb(23, 23, 23);
+  border-radius: 15px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(37, 37, 37);
 }
 
 body {
@@ -57,11 +57,11 @@ body {
   padding-top: 70px;
   overflow-y: auto;
   font-family: var(--second);
+
   ::-webkit-scrollbar {
     width: 12px;
     height: 12px;
   }
-  /* border: 1px solid red; */
 }
 
 /* NAVBAR */
@@ -120,7 +120,7 @@ nav {
 
 .nav-links > span:nth-child(2) {
   color: white;
-  background-color: var(--greenFull1);
+  background-color: transparent;
   border: 1px solid var(--greenFull3);
 }
 
@@ -263,83 +263,6 @@ nav {
 
 /* BENEFITS SECTION */
 
-/* Mensajes de alerta centrados */
-/* Mensajes de alerta centrados y personalizados */
-.alert-center {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 1050;
-  display: none;
-  padding: 15px;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  text-align: center;
-  width: 80%;
-  max-width: 300px;
-  font-size: 1.1rem;
-  opacity: 0;
-}
-
-.alert-danger {
-  background-color: #dc3545;
-  color: #ffffff;
-}
-
-.alert-success {
-  background-color: #28a745;
-  color: #ffffff;
-}
-
-.alert.show {
-  display: block;
-  animation: fadeIn 0.5s forwards, fadeOut 0.5s forwards 2.5s; /* Aparecer y desaparecer */
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
-}
-
-/* Animación de desvanecimiento */
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-    transform: translateY(-10px);
-  }
-  to {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-.tab-pane {
-  animation: fadeIn 0.5s ease-in-out;
-}
-
-.btn-custom {
-  background-color: #007bff;
-  color: #ffffff;
-}
-
-.btn-custom:hover {
-  background-color: #0056b3;
-}
-
 /* DASHBOARD APP*/
 #dashboard-section {
   display: grid;
@@ -378,17 +301,12 @@ nav {
   justify-content: center;
   align-items: center;
   gap: 10px;
-  backdrop-filter: blur(25px) saturate(200%);
-  -webkit-backdrop-filter: blur(25px) saturate(200%);
-  background-color: rgba(255, 255, 255, 0);  border-right: 1px solid var(--greenFull4);
-  border-top: 1px solid var(--greenFull4);
-  border-bottom: 1px solid var(--greenFull4);
+  background-color: var(--greenFull5);
   color: white;
-  height: 100vh;
+  height: 95vh;
   top: 74px;
   z-index: 1000;
-  /* border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px; */
+  border-bottom-left-radius: 5px;
   padding: 0 10px;
   width: 300px;
   transition-duration: 0.4s;
@@ -421,17 +339,28 @@ nav {
 
 #control-aside {
   position: absolute;
-  top: -24px;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  top: 1px;
   left: -60px;
-  color: var(--greenFull4);
+  color: black;
   font-size: 25px;
   cursor: pointer;
   padding: 30px;
   z-index: 2000;
+  transform: rotate(180deg);
+  background-color: var(--greenFull5);
+  border-top-right-radius: 5px;
+
+  i {
+    position: absolute;
+    left: 20px;
+  }
 }
 
 #control-aside:hover {
-  color: var(--greenFull5);
+  color: var(--greenFull2);
 }
 
 .logo-dashboard-container {
@@ -445,7 +374,7 @@ nav {
   h1 {
     font-family: var(--main);
     font-size: 2rem;
-    color: var(--greenFull5);
+    color: black;
     font-weight: bold;
   }
 
@@ -457,40 +386,29 @@ nav {
 /* BARRA DE CONTROL LATERAL */
 .minutes-info {
   display: flex;
-  justify-content: space-between;
-  background-color: var(--greenFull4);
   color: #ffffff;
-  border: 2px solid;
-  padding: 10px;
-  text-align: center;
-  border-radius: 8px;
-  margin-top: 20px;
-
-  border: 1px solid gold;
-  * {
-    border: 1px solid gold;
-  }
+  border: 1px solid var(--greenFull5);
+  padding: 0 0 12px 0;
+  border-radius: 4px;
 }
 
 .button-tab {
   padding: 10px 20px;
   border-radius: 5px;
-  background-color: var(--greenFull5);
-  color: white;
+  border: 1px solid black;
+  color: black;
   font-family: var(--main);
   transition: 0.2s;
   font-weight: bold;
   background-color: transparent;
   cursor: pointer;
-  border: 1px solid var(--greenFull5);
   width: 100%;
   margin-top: 20px;
   position: relative;
 }
 
 .button-tab:hover {
-  background-color: var(--greenFull5);
-  color: black;
+  background-color: var(--greenFull4);
 }
 
 #icon-content-buttons-aside {
@@ -532,6 +450,29 @@ nav {
   border-radius: 4px;
 }
 
+input[type="file"] {
+  border-style: dotted;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  text-align: center;
+  transition: 0.5s all;
+}
+
+input[type="file"]:hover {
+  background-color: var(--greenFull5);
+  color: black;
+}
+
+input[type="file"]::after {
+  content: "";
+}
+
+input[type="file"]::-webkit-file-upload-button {
+  display: none;
+}
+
 .input-user-dashboard:focus {
   border: 1px solid var(--greenFull5);
 }
@@ -558,13 +499,12 @@ nav {
   border: 1px solid var(--greenFull5);
 }
 
-.input-suggestions {
-  display: flex;
-  gap: 15px;
-}
-
 .dashboard-content-forms {
   width: 100%;
+  /* border: 1px solid gold; */
+  /* * {
+    border: 1px solid green;
+  } */
 }
 
 .form-user-dashboard {
@@ -595,6 +535,55 @@ input[type="file"][webkitdirectory]:hover::file-selector-button {
   border: none;
 }
 
+/* BOTON DE SUGERIR TITULOS */
+.btn-outline-secondary {
+  border: none;
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+  padding: 10px 0px;
+  background: transparent;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+  background-color: var(--greenFull5);
+}
+.text {
+  font-weight: bold;
+  color: black;
+  font-family: var(--main);
+  transition: all 450ms ease-in-out;
+}
+
+.text:hover {
+  color: white;
+}
+
+.sparkle {
+  fill: black;
+  transition: all 800ms ease;
+}
+
+.btn-outline-secondary:hover .sparkle {
+  fill: white;
+}
+.btn-outline-secondary:hover .text {
+  color: black;
+}
+.btn-outline-secondary:hover {
+  background-color: var(--greenFull4);
+}
+
+#configForm,
+#changeCredentialsForm,
+#minute-info {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+/* BOTON DE SUGERIR TITULOS */
 /* DASHBOARD APP*/
 /* DASHBOARD APP*/
 /* DASHBOARD APP*/
@@ -731,12 +720,6 @@ input[type="file"][webkitdirectory]:hover::file-selector-button {
   border: 2px solid;
   border-image: linear-gradient(45deg, #87f414, #0a6207, #0b340f, #07141a) 1;
   color: #ffffff;
-}
-
-/* Estilos para la pestaña activa con animación de gradiente */
-.active {
-  background-color: var(--greenFull5);
-  color: black;
 }
 
 /* Estilos para el chatbot */
@@ -1099,32 +1082,22 @@ button:hover #clip {
   }
 }
 
-/*BOTON DE AGREGAR*/
-/* Estilos para los nuevos botones */
+/* BUTTON SAVE API KEY */
 .btn-custom {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 11rem;
   overflow: hidden;
-  height: 2.5rem;
-  background-size: 300% 300%;
-  backdrop-filter: blur(1rem);
-  border-radius: 5rem;
+  width: 100%;
+  padding: 10px 0;
+  border-radius: 4px;
   transition: 0.5s;
   animation: gradient_301 5s ease infinite;
-  border: double 4px transparent;
-  background-image: linear-gradient(#000a03, #000a03),
-    linear-gradient(
-      137.48deg,
-      #30833b 10%,
-      #0a6207 45%,
-      #87f414 67%,
-      #0b340f 87%
-    );
-  background-origin: border-box;
-  background-clip: content-box, border-box;
+  border: 1px solid var(--greenFull5);
   position: relative;
+  background-color: transparent;
+  color: white;
+  cursor: pointer;
 }
 
 #container-stars {
@@ -1159,25 +1132,9 @@ button:hover #clip {
 .circle:nth-of-type(2) {
   background: rgba(142, 81, 234, 0.704);
 }
-
+/* BUTTON SAVE API KEY */
 .btn-custom:hover #container-stars {
   z-index: 1;
-  background-color: #212121;
-}
-
-.btn-custom:hover {
-  transform: scale(1.1);
-}
-
-.btn-custom:active {
-  border: double 4px #1c0438;
-  background-origin: border-box;
-  background-clip: content-box, border-box;
-  animation: none;
-}
-
-.btn-custom:active .circle {
-  background: #1c0438;
 }
 
 #stars {
@@ -1213,7 +1170,6 @@ button:hover #clip {
 }
 
 #stars::before {
-  background-image: radial-gradient(#ffffff 1px, transparent 1%);
   background-size: 50px 50px;
   opacity: 0.5;
 }
@@ -1251,52 +1207,15 @@ button:hover #clip {
 @keyframes pulse_3011 {
   0% {
     transform: scale(0.75);
-    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
   }
   70% {
     transform: scale(1);
-    box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
   }
   100% {
     transform: scale(0.75);
-    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
   }
 }
-
-/*BOTONES SIMPLES*/
-.btn-outline-secondary {
-  border: none;
-  width: 13em;
-  height: 3em;
-  border-radius: 4px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 12px;
-  background: var(--greenFull1);
-  cursor: pointer;
-  transition: all 450ms ease-in-out;
-}
-
-.sparkle {
-  fill: #aaaaaa;
-  transition: all 800ms ease;
-}
-
-.text {
-  font-weight: 600;
-  color: #d4d4d4;
-  font-size: medium;
-}
-
-.btn:hover .text {
-  color: white;
-}
-
-.btn:hover .sparkle {
-  fill: white;
-  transform: scale(1.1);
-}
+/* BUTTON SAVE API KEY */
 
 /* Organizar elementos en dos columnas */
 /* Animaciones para desplegables */
@@ -1317,14 +1236,8 @@ button:hover #clip {
   animation: fadeIn 0.5s ease-in-out;
 }
 
-/* El contenedor donde se añaden los planes */
 /* El overlay */
 .panel-upgrade {
-  /* border: 1px solid gold;
-  * {
-    border: 1px solid gold;
-  } */
-
   position: fixed;
   top: 0;
   left: 0;
@@ -1339,7 +1252,6 @@ button:hover #clip {
   overflow-y: scroll;
 }
 
-/* Deja que el contenido se ajuste a su ancho */
 .panel-upgrade-content {
   display: block;
   max-width: 90%;
@@ -1378,7 +1290,6 @@ button:hover #clip {
   }
 }
 
-/* El contenedor donde se añaden los planes */
 #plansContainer {
   left: 0;
   display: flex;
@@ -1386,22 +1297,6 @@ button:hover #clip {
   justify-content: center;
   gap: 20px;
   margin-bottom: 20px;
-
-  /* Estilo del track (fondo de la scrollbar) */
-  #plansContainer::-webkit-scrollbar-track {
-    background: #f1f1f1; /* Color del track */
-  }
-
-  /* Estilo del thumb (parte que se mueve) */
-  #plansContainer::-webkit-scrollbar-thumb {
-    background: #888; /* Color del thumb */
-    border-radius: 6px; /* Bordes redondeados */
-  }
-
-  /* Estilo del thumb al pasar el mouse */
-  #plansContainer::-webkit-scrollbar-thumb:hover {
-    background: #555; /* Color del thumb al pasar el mouse */
-  }
 }
 
 /* Cada tarjeta (plan) */
@@ -1486,26 +1381,20 @@ button:hover #clip {
   display: inline-block;
   padding: 10px 20px;
   color: #ffffff;
-  background-image: linear-gradient(
-    45deg,
-    var(--greenFull3),
-    var(--greenFull4),
-    var(--greenFull5)
-  );
-  background-size: 300% 300%;
   animation: gradient_301 5s ease infinite;
-  border: none;
-  border-radius: 2px;
+  border: 1px solid var(--greenFull5);
+  border-radius: 4px;
   cursor: pointer;
   transition: 0.3s all;
   font-weight: bold;
   margin-left: 10px;
+  background-color: transparent;
 }
 
 /* Al pasar el mouse */
 .btn-upgrade:hover {
-  transform: scale(1.05);
-  box-shadow: 0 0 10px rgba(135, 244, 20, 0.7);
+  background-color: var(--greenFull5);
+  color: black;
 }
 
 /* Animación del gradiente */
@@ -1593,4 +1482,72 @@ button:hover #clip {
 
 .btn-confirm:hover {
   background-color: rgb(255, 86, 86);
+}
+
+/* Mensajes de alerta centrados */
+/* Mensajes de alerta centrados y personalizados */
+.alert-center {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1050;
+  display: block;
+  padding: 15px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  width: 80%;
+  max-width: 300px;
+  font-size: 1.1rem;
+  opacity: 0;
+}
+
+.alert-danger {
+  background-color: #dc3545;
+  color: #ffffff;
+}
+
+.alert-success {
+  background-color: #28a745;
+  color: #ffffff;
+}
+
+.alert.show {
+  display: block;
+  animation: fadeIn 0.5s forwards, fadeOut 0.5s forwards 2.5s; /* Aparecer y desaparecer */
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+/* Animación de desvanecimiento */
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.tab-pane {
+  animation: fadeIn 0.5s ease-in-out;
 }
