--- a/static/main/css/styles.css
+++ b/static/main/css/styles.css
@@ -3,11 +3,10 @@
 
 :root {
   /* PALETA DE COLORES */
-  --greenFull2: #151e10;
-  --greenFull1: #26371a;
-  --greenFull3: #4b613c;
-  --greenFull4: #7f965e;
-  --greenFull5: #ccdea1;
+  --greenFull1: #9df01a;
+  --greenFull2: #70e000;
+  --greenFull3: #38b000;
+  --blackPanel: rgb(22, 22, 22);
   /* FONTS */
   --main: "Nunito", serif;
   --second: "Roboto", serif;
@@ -26,6 +25,11 @@
   section {
     width: 100%;
   }
+
+  /* border: 1px solid red;
+  * {
+    border: 1px solid gold;
+  } */
 }
 
 ::-webkit-scrollbar {
@@ -64,17 +68,19 @@ body {
   }
 }
 
+.container {
+  width: 100%;
+}
+
 /* NAVBAR */
 nav {
   width: 100%;
-  padding: 10px 0;
+  padding: 5px 0;
   position: fixed;
-  /* background-color: var(--greenFull1); */
-  /* background-color: black; */
   backdrop-filter: blur(25px) saturate(200%);
   -webkit-backdrop-filter: blur(25px) saturate(200%);
-  background-color: rgba(255, 255, 255, 0);
-  border-bottom: 1px solid var(--greenFull4);
+  background-color: rgb(37, 37, 37);
+  border-bottom: 1px solid var(--blackPanel);
   top: 0;
   display: flex;
   justify-content: space-between;
@@ -83,9 +89,16 @@ nav {
 
   .link-logo {
     transition: 0.8s;
+    display: flex;
+    align-items: center;
   }
-  .link-logo:hover {
-    filter: drop-shadow(1px 1px 5px var(--greenFull5));
+  .link-logo > img:hover {
+    filter: drop-shadow(1px 1px 5px var(--greenFull2));
+  }
+
+  .link-logo > h1 {
+    font-family: var(--main);
+    color: var(--greenFull3);
   }
 }
 
@@ -106,7 +119,7 @@ nav {
 }
 
 .nav-links > a:hover {
-  color: var(--greenFull5);
+  color: var(--greenFull2);
 }
 
 .nav-links > span {
@@ -117,23 +130,19 @@ nav {
   border-radius: 25px;
   cursor: pointer;
 }
+.nav-links > span:nth-child(1) {
+  border: 1px solid grey;
+}
+.nav-links > span:nth-child(1):hover {
+  border: 1px solid var(--greenFull2);
+}
 
 .nav-links > span:nth-child(2) {
   color: white;
-  background-color: transparent;
-  border: 1px solid var(--greenFull3);
 }
 
 .nav-links > span:nth-child(2):hover {
-  border: 1px solid var(--greenFull5);
-}
-
-.nav-links > span:nth-child(3) {
-  color: var(--greenFull4);
-}
-
-.nav-links > span:nth-child(3):hover {
-  color: white;
+  color: var(--greenFull3);
 }
 
 /* NAVBAR */
@@ -158,7 +167,7 @@ nav {
       font-weight: bold;
       font-size: 65px;
       text-align: right;
-      color: var(--greenFull5);
+      color: var(--greenFull3);
       background: linear-gradient(
         90deg,
         var(--greenFull3),
@@ -182,7 +191,7 @@ nav {
     margin-top: 45px;
     padding: 10px 20px;
     border-radius: 5px;
-    background-color: var(--greenFull5);
+    background-color: var(--greenFull3);
     color: black;
     font-family: var(--main);
     transition: 0.2s;
@@ -212,14 +221,14 @@ nav {
     font-family: var(--main);
     font-size: 30px;
     font-weight: bold;
-    color: var(--greenFull5);
+    color: var(--greenFull3);
     text-align: center;
   }
 
   span {
     font-family: var(--second);
     font-size: 20px;
-    color: var(--greenFull5);
+    color: var(--greenFull3);
     text-align: center;
     font-weight: 300;
   }
@@ -231,14 +240,14 @@ nav {
     .card-benefit {
       padding: 15px;
       border-radius: 5px;
-      background: var(--greenFull5);
+      background: var(--greenFull3);
       display: flex;
       flex-direction: column;
       justify-content: space-around;
       align-items: center;
       box-shadow: 1px 1px 10px 2px var(--greenFull3);
       * {
-        border: 1px solid var(--greenFull5);
+        border: 1px solid var(--green2);
       }
       img {
         width: 100px;
@@ -265,8 +274,6 @@ nav {
 
 /* DASHBOARD APP*/
 #dashboard-section {
-  display: grid;
-  grid-template-columns: 1fr 5fr;
   height: 100%;
   overflow-y: scroll;
   position: relative;
@@ -298,69 +305,86 @@ nav {
 #aside-buttons {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   gap: 10px;
-  background-color: var(--greenFull5);
+  background-color: rgb(37, 37, 37);
   color: white;
-  height: 95vh;
-  top: 74px;
+  height: 90vh;
+  top: 60px;
+  left: 0;
   z-index: 1000;
-  border-bottom-left-radius: 5px;
   padding: 0 10px;
-  width: 300px;
+  width: 70px;
   transition-duration: 0.4s;
   position: fixed;
+  border-right: 1px solid var(--blackPanel);
+
+  /* * {
+    border: 1px solid red;
+  } */
+}
+#aside-buttons:hover {
+  width: 250px;
+}
+#aside-buttons:hover .secondary-content {
+  display: flex;
 }
 
-.open-aside {
-  transition-duration: 1s all;
-  right: -5px;
-}
-
-.close-aside {
-  right: -300px;
-  transition-duration: 1s all;
-}
-
-.control-container-open {
+.secondary-content {
+  position: absolute;
+  bottom: 20px;
+  width: 200px;
+  display: none;
+  flex-direction: column;
+  gap: 15px;
+  transition-duration: 0.4s;
+  color: grey;
+  font-family: var(--main);
+  font-size: 15px;
   /* * {
     border: 1px solid gold;
   } */
-  transition-duration: 0.4s;
-  width: calc(100vw - 300px);
-  float: right;
-}
+  a {
+    color: grey;
+  }
 
-.control-container-close {
-  width: 90vw;
-  transition-duration: 0.4s;
-}
-
-#control-aside {
-  position: absolute;
-  display: flex;
-  align-items: center;
-  justify-content: start;
-  top: 1px;
-  left: -60px;
-  color: black;
-  font-size: 25px;
-  cursor: pointer;
-  padding: 30px;
-  z-index: 2000;
-  transform: rotate(180deg);
-  background-color: var(--greenFull5);
-  border-top-right-radius: 5px;
-
-  i {
-    position: absolute;
-    left: 20px;
+  a:hover {
+    color: var(--greenFull3);
   }
 }
 
-#control-aside:hover {
-  color: var(--greenFull2);
+.secondary-content > a:nth-child(4) {
+  cursor: text;
+}
+
+.secondary-content > a:nth-child(4):hover {
+  color: grey;
+}
+
+.logos-redes {
+  padding-top: 20px;
+  border-top: 1px solid var(--blackPanel);
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.secondary-content > .logos-redes > a > span {
+  font-size: 20px;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.secondary-content > .logos-redes > a > span:hover {
+  background-color: var(--blackPanel);
+  color: var(--greenFull3);
+}
+
+.links-secondary {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
 }
 
 .logo-dashboard-container {
@@ -383,45 +407,58 @@ nav {
   }
 }
 
-/* BARRA DE CONTROL LATERAL */
 .minutes-info {
   display: flex;
   color: #ffffff;
-  border: 1px solid var(--greenFull5);
+  border: 1px solid var(--green);
   padding: 0 0 12px 0;
   border-radius: 4px;
 }
 
 .button-tab {
+  display: flex;
+  justify-content: space-between;
+  gap: 25px;
   padding: 10px 20px;
   border-radius: 5px;
-  border: 1px solid black;
-  color: black;
-  font-family: var(--main);
-  transition: 0.2s;
-  font-weight: bold;
+  border: none;
   background-color: transparent;
+  color: grey;
+  font-family: var(--main);
+  transition: 0.4s;
+  font-weight: bold;
   cursor: pointer;
   width: 100%;
+  height: 40px;
   margin-top: 20px;
   position: relative;
+  overflow: hidden;
 }
 
 .button-tab:hover {
-  background-color: var(--greenFull4);
+  transition: 0.4s;
+  /* background-color: rgb(49, 49, 49); */
+  background-color: var(--greenFull3);
+  color: black;
+}
+
+.active {
+  background-color: var(--blackPanel);
 }
 
 #icon-content-buttons-aside {
-  position: absolute;
-  left: 10px;
+  color: white;
 }
 
 .buttons-content {
   width: 100%;
 }
 
+/* BARRA DE CONTROL LATERAL */
+
 #dashboard-content-generator {
-  background-color: transparent;
+  width: 80%;
+  margin: 0 auto;
 }
 
 .form-user-dashboard {
@@ -436,7 +473,7 @@ nav {
 
 .label-user-dashboard {
   font-family: var(--main);
-  color: var(--greenFull5);
+  color: var(--greenFull3);
   font-weight: bold;
   font-size: 25px;
 }
@@ -444,10 +481,14 @@ nav {
 .input-user-dashboard {
   padding: 10px 5px;
   background-color: transparent;
-  border: 1px solid var(--greenFull4);
+  border: 1px solid var(--blackPanel);
   font-family: var(--second);
   color: white;
   border-radius: 4px;
+}
+
+.input-user-dashboard:focus {
+  border: 1px solid white;
 }
 
 input[type="file"] {
@@ -461,7 +502,7 @@ input[type="file"] {
 }
 
 input[type="file"]:hover {
-  background-color: var(--greenFull5);
+  background-color: var(--greenFull3);
   color: black;
 }
 
@@ -473,14 +514,10 @@ input[type="file"]::-webkit-file-upload-button {
   display: none;
 }
 
-.input-user-dashboard:focus {
-  border: 1px solid var(--greenFull5);
-}
-
 .select-user-dashboard {
   padding: 5px 2px;
   background-color: transparent;
-  border: 1px solid var(--greenFull4);
+  border: 1px solid var(--blackPanel);
   color: white;
   cursor: pointer;
   border-radius: 4px;
@@ -489,18 +526,19 @@ input[type="file"]::-webkit-file-upload-button {
 }
 
 .select-user-dashboard option {
-  background-color: var(--greenFull4);
+  background-color: var(--blackPanel);
   font-family: var(--second);
-  color: black;
+  color: white;
   font-weight: bold;
 }
 
 .select-user-dashboard:focus {
-  border: 1px solid var(--greenFull5);
+  border: 1px solid var(--greenFull2);
 }
 
 .dashboard-content-forms {
-  width: 100%;
+  width: 50%;
+  margin: 0 auto;
   /* border: 1px solid gold; */
   /* * {
     border: 1px solid green;
@@ -520,7 +558,7 @@ input[type="file"]::-webkit-file-upload-button {
 }
 
 input[type="file"][webkitdirectory]::file-selector-button {
-  background-color: var(--greenFull5);
+  background-color: var(--greenFull3);
   color: black;
   padding: 5px;
   border-radius: 5px;
@@ -537,6 +575,8 @@ input[type="file"][webkitdirectory]:hover::file-selector-button {
 
 /* BOTON DE SUGERIR TITULOS */
 .btn-outline-secondary {
+  margin: 0 auto;
+  width: 50%;
   border: none;
   border-radius: 4px;
   display: flex;
@@ -547,32 +587,30 @@ input[type="file"][webkitdirectory]:hover::file-selector-button {
   background: transparent;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
-  background-color: var(--greenFull5);
+  background-color: var(--blackPanel);
 }
 .text {
   font-weight: bold;
-  color: black;
+  color: white;
   font-family: var(--main);
   transition: all 450ms ease-in-out;
 }
 
-.text:hover {
+/* .text:hover {
   color: white;
-}
+} */
 
 .sparkle {
-  fill: black;
+  fill: var(--greenFull3);
   transition: all 800ms ease;
 }
 
 .btn-outline-secondary:hover .sparkle {
   fill: white;
 }
-.btn-outline-secondary:hover .text {
-  color: black;
-}
+
 .btn-outline-secondary:hover {
-  background-color: var(--greenFull4);
+  background-color: rgb(60, 60, 60);
 }
 
 #configForm,
@@ -1093,7 +1131,7 @@ button:hover #clip {
   border-radius: 4px;
   transition: 0.5s;
   animation: gradient_301 5s ease infinite;
-  border: 1px solid var(--greenFull5);
+  border: 1px solid var(--greenFull3);
   position: relative;
   background-color: transparent;
   color: white;
@@ -1259,13 +1297,13 @@ button:hover #clip {
   padding: 20px;
   border-radius: 8px;
   box-sizing: border-box;
-
   background: transparent;
+
   .title-upgrade-panel {
     width: 100%;
     text-align: center;
     font-weight: bold;
-    color: var(--greenFull5);
+    color: var(--green2);
     font-weight: bold;
     font-size: 2rem;
     font-family: var(--main);
@@ -1301,7 +1339,7 @@ button:hover #clip {
 
 /* Cada tarjeta (plan) */
 .plan-item {
-  border: 2px solid var(--greenFull5);
+  border: 2px solid var(--green3);
   border-radius: 8px;
   background-color: black;
   padding: 15px;
@@ -1322,7 +1360,7 @@ button:hover #clip {
 }
 
 .plan-item > p {
-  color: var(--greenFull5);
+  color: var(--greenFull2);
   font-family: var(--second);
   font-size: 20px;
 }
@@ -1331,7 +1369,7 @@ button:hover #clip {
   font-size: 1.2rem;
   font-weight: 200;
   font-family: var(--second);
-  color: var(--greenFull5);
+  color: var(--greenFull2);
   padding: 0;
 }
 
@@ -1348,7 +1386,7 @@ button:hover #clip {
 }
 
 .plan-item button:hover {
-  background-color: var(--greenFull5);
+  background-color: var(--greenFull3);
 }
 
 /* Animación de entrada */
@@ -1382,7 +1420,7 @@ button:hover #clip {
   padding: 10px 20px;
   color: #ffffff;
   animation: gradient_301 5s ease infinite;
-  border: 1px solid var(--greenFull5);
+  border: 1px solid var(--greenFull2);
   border-radius: 4px;
   cursor: pointer;
   transition: 0.3s all;
@@ -1393,7 +1431,7 @@ button:hover #clip {
 
 /* Al pasar el mouse */
 .btn-upgrade:hover {
-  background-color: var(--greenFull5);
+  background-color: var(--green3);
   color: black;
 }
 
@@ -1469,7 +1507,7 @@ button:hover #clip {
 }
 
 .btn-cancel {
-  background-color: var(--greenFull5);
+  background-color: var(--greenFull2);
 }
 
 .btn-cancel:hover {
