--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -39,14 +39,15 @@
           width="50"
           height="50"
         />
+        <h1>Clipgen Ai</h1>
       </a>
       <div class="nav-links">
         {% if user.is_authenticated %}
         <a id="generate-content" href="{% url 'index' %}">Generar Contenido</a>
-        <a id="sobre" href="{% url 'sobre' %}">ClipgenAI</a>
+        <!-- <a id="sobre" href="{% url 'sobre' %}">ClipgenAI</a> -->
         <a id="cerrar-sesion" href="{% url 'logout' %}">Cerrar Sesión</a>
         {% else %}
-        <a id="sobre" href="{% url 'sobre' %}">ClipgenAI</a>
+        <!-- <a id="sobre" href="{% url 'sobre' %}">ClipgenAI</a> -->
         <span href="" id="login" onclick="showLogin()">Iniciar Sesión</span>
         <span href="" id="register" onclick="showRegister()">Registrarse</span>
         {% endif %}
