update dashboard content

--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -25,6 +25,10 @@
     />
     <link href="{% static 'main/css/login.css' %}" rel="stylesheet" />
     <link href="{% static 'main/css/register.css' %}" rel="stylesheet" />
+    <link
+      href="{% static 'main/css/Dashboard/dashboard-styles.css' %}"
+      rel="stylesheet"
+    />
 
     <meta name="csrf-token" content="{{ csrf_token }}" />
   </head>
