--- a/static/main/css/styles.css
+++ b/static/main/css/styles.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
 
 :root {
   /* PALETA DE COLORES */
@@ -7,8 +8,13 @@
   --greenFull2: #70e000;
   --greenFull3: #38b000;
   --blackPanel: rgb(22, 22, 22);
+  --panel2: rgb(140, 140, 140);
+  --blueBtns: #0d64de;
+  --blueBtns2: #3e8fff;
+  --inputs: rgb(29, 29, 29);
+  --borderInputs: rgb(50, 50, 50);
   /* FONTS */
-  --main: "Nunito", serif;
+  --main: "Lato", serif;
   --second: "Roboto", serif;
 }
 
@@ -50,7 +56,7 @@
 }
 
 body {
-  background-color: black;
+  background-color: var(--blackPanel);
   color: #ffffff;
   display: flex;
   flex-direction: column;
@@ -68,139 +74,11 @@ body {
   }
 }
 
-/* NAVBAR */
-nav {
+.container {
+  position: relative;
   width: 100%;
-  padding: 5px 0;
-  position: fixed;
-  backdrop-filter: blur(25px) saturate(200%);
-  -webkit-backdrop-filter: blur(25px) saturate(200%);
-  background-color: rgb(37, 37, 37);
-  border-bottom: 1px solid var(--blackPanel);
-  top: 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  z-index: 1999;
-
-  .link-logo {
-    transition: 0.8s;
-    display: flex;
-    align-items: center;
-  }
-  .link-logo > img:hover {
-    filter: drop-shadow(1px 1px 5px var(--greenFull2));
-  }
-
-  .link-logo > h1 {
-    font-family: var(--main);
-    color: var(--greenFull3);
-  }
 }
 
-.nav-links {
-  display: flex;
-  margin-right: 25px;
-  gap: 10px;
-  padding-bottom: 4px;
-}
-
-.nav-links > a {
-  text-decoration: none;
-  color: white;
-  font-family: var(--main);
-  font-weight: bold;
-  padding: 5px 10px;
-  border-radius: 25px;
-}
-
-.nav-links > a:hover {
-  color: var(--greenFull2);
-}
-
-.nav-links > span {
-  color: white;
-  font-family: var(--main);
-  font-weight: bold;
-  padding: 5px 10px;
-  border-radius: 25px;
-  cursor: pointer;
-}
-.nav-links > span:nth-child(1) {
-  border: 1px solid grey;
-}
-.nav-links > span:nth-child(1):hover {
-  border: 1px solid var(--greenFull2);
-}
-
-.nav-links > span:nth-child(2) {
-  color: white;
-}
-
-.nav-links > span:nth-child(2):hover {
-  color: var(--greenFull3);
-}
-
-/* NAVBAR */
-
-/* HERO SECTION */
-.hero {
-  min-height: 100vh;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: start;
-  padding: 10px;
-  /* * {
-    border: 1px solid red;
-  } */
-  div {
-    margin-top: 100px;
-    width: 80%;
-    h1 {
-      font-family: var(--main);
-      font-weight: bold;
-      font-size: 65px;
-      text-align: right;
-      color: var(--greenFull3);
-      background: linear-gradient(
-        90deg,
-        var(--greenFull3),
-        var(--greenFull4),
-        white
-      );
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      background-clip: text;
-    }
-    h3 {
-      text-align: right;
-      color: white;
-      font-family: var(--second);
-      font-weight: bold;
-      font-size: 40px;
-      font-weight: 200;
-    }
-  }
-  a {
-    margin-top: 45px;
-    padding: 10px 20px;
-    border-radius: 5px;
-    background-color: var(--greenFull3);
-    color: black;
-    font-family: var(--main);
-    transition: 0.2s;
-    font-weight: bold;
-  }
-
-  a:hover {
-    transition: 0.6s;
-    background-color: white;
-  }
-}
-
-/* HERO SECTION */
 /* BENEFITS SECTION */
 
 .benefits {
@@ -755,8 +633,6 @@ button:hover #clip {
   }
 }
 
-
-
 /* Organizar elementos en dos columnas */
 /* Animaciones para desplegables */
 
@@ -776,9 +652,11 @@ button:hover #clip {
   animation: fadeIn 0.5s ease-in-out;
 }
 
-/* El overlay */
+/* PANEL DE PLANES DE PAGO */
 .panel-upgrade {
   position: fixed;
+  width: 100%;
+  height: 100%;
   top: 0;
   left: 0;
   right: 0;
@@ -787,14 +665,19 @@ button:hover #clip {
   -webkit-backdrop-filter: blur(25px) saturate(180%);
   background-color: rgba(255, 255, 255, 0);
   z-index: 9999;
-  display: flex;
+  display: none;
+  justify-content: center;
   align-items: center;
   overflow-y: scroll;
+  flex-wrap: wrap;
 }
 
 .panel-upgrade-content {
-  display: block;
-  max-width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  max-width: 100%;
   margin: 0px auto;
   padding: 20px;
   border-radius: 8px;
@@ -807,8 +690,9 @@ button:hover #clip {
     font-weight: bold;
     color: var(--green2);
     font-weight: bold;
-    font-size: 2rem;
+    font-size: 2.5rem;
     font-family: var(--main);
+    margin-bottom: 20px;
   }
   .close-panel {
     position: absolute;
@@ -831,40 +715,99 @@ button:hover #clip {
 }
 
 #plansContainer {
-  left: 0;
   display: flex;
-  flex-wrap: wrap;
+  align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 20px;
   margin-bottom: 20px;
 }
 
-/* Cada tarjeta (plan) */
+/* CARD PLAN */
 .plan-item {
-  border: 2px solid var(--green3);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   border-radius: 8px;
   background-color: black;
   padding: 15px;
   color: #ffffff;
   animation: fadeIn 0.5s ease-in-out;
-
+  width: 400px;
+  height: 400px;
+  position: relative;
   /* * {
     border: 1px solid red;
   } */
 }
+#plan-item-feature {
+  margin-top: 60px;
+}
 
+#plan-item-feature-line {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+  font-weight: bold;
+  font-family: var(--main);
+  margin-top: 5px;
+}
+
+#plan-item-feature-line > span {
+  width: 80%;
+}
+
+#plan-item-feature-line > img {
+  width: 30px;
+}
 .plan-item h3 {
   margin: 0;
   font-size: 1.8rem;
-  color: var(--greenFull4);
+  color: black;
   font-family: var(--main);
   font-weight: bold;
+  background-color: var(--greenFull1);
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  text-align: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 10px;
 }
 
-.plan-item > p {
-  color: var(--greenFull2);
+.plan-item h3 > img {
+  width: 40px;
+  filter: drop-shadow(1px 1px 5px var(--greenFull2));
+  position: absolute;
+  right: 5px;
+  top: 10px;
+}
+
+#plan-item-content-finally {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+#price-plan {
+  font-weight: bold;
   font-family: var(--second);
-  font-size: 20px;
+  font-size: 30px;
+  width: fit-content;
+  text-align: right;
+  padding: 5px;
+  /* border: 1px solid var(--greenFull3);
+  border-radius: 5px;
+   filter: drop-shadow(1px 1px 5px var(--greenFull3)); */
+
+  background: linear-gradient(to right, #4caf50, #78ff7f);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .plan-item > p:nth-child(3) {
@@ -875,22 +818,25 @@ button:hover #clip {
   padding: 0;
 }
 
-.plan-item button {
-  background-color: var(--greenFull4);
+.btn-subscription {
+  background-color: var(--greenFull3);
   color: #ffffff;
-  border: none;
+  border: 1px solid white;
   border-radius: 5px;
   transition: background-color 0.3s ease;
   padding: 10px 20px;
   cursor: pointer;
-  margin-top: 10px;
   color: black;
+  font-weight: bold;
+  font-family: var(--main);
+  transition: 0.3s;
 }
 
-.plan-item button:hover {
-  background-color: var(--greenFull3);
+.btn-subscription:hover {
+  background-color: var(--greenFull2);
+  transform: translateY(-1px);
 }
-
+/* PANEL DE PLANES DE PAGO */
 /* Animación de entrada */
 @keyframes fadeIn {
   from {
@@ -960,31 +906,137 @@ button:hover #clip {
   bottom: 0;
   backdrop-filter: blur(25px) saturate(180%);
   -webkit-backdrop-filter: blur(25px) saturate(180%);
-  background-color: rgba(0, 0, 0, 0);
+  background-color: rgba(13, 13, 13, 0.343);
   z-index: 9999;
   display: none;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
+}
+
+.panel-cancel > a {
+  position: absolute;
+  top: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  font-family: var(--main);
+  font-weight: bold;
+  font-size: 25px;
+  -webkit-text-stroke: 2px black;
+  color: white;
+  font-size: 25px;
+}
+
+@keyframes glow {
+  0% {
+    border-top: 1px solid white;
+  }
+  25% {
+    border-right: 1px solid white;
+  }
+  50% {
+    border-bottom: 1px solid white;
+  }
+  75% {
+    border-left: 1px solid white;
+  }
+  100% {
+    border: 1px solid white;
+  }
+}
+
+.animation-class {
+  animation: glow 2s infinite alternate;
+}
+
+.panel-cancel > a > img {
+  width: 70px;
+  filter: drop-shadow(1px 1px 5px var(--greenFull3));
 }
 
 /* Contenido interno (caja negra) */
 .panel-cancel-content {
-  background-color: black;
+  /* background-color: rgb(13, 13, 13); */
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
   gap: 10px;
-  max-width: 50%;
+  width: 90vw;
+  height: 80vh;
   padding: 20px;
-  border-radius: 4px;
   box-sizing: border-box;
   font-family: var(--main);
   text-align: center;
-  border: 2px solid var(--greenFull4);
+  overflow-y: auto;
 }
 
-.panel-cancel-content > h2 {
-  color: var(--greenFull3);
+.panel-cancel-content > div {
+  width: 80%;
+
+}
+.panel-cancel-content > div > h2 {
+  color: white;
+  font-weight: bold;
+  font-size: 28px;
   font-family: var(--main);
+}
+.panel-cancel-content > div > p {
+  color: white;
+  font-size: 16px;
+  font-family: var(--second);
+  text-align: center;
+  width: 100%;
+}
+
+.panel-cancel-content > form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.panel-cancel-content > form > label,
+.panel-cancel-content > form > select,
+.panel-cancel-content > form > select > option,
+.panel-cancel-content > form > textarea {
+  width: 100%;
+  text-align: left;
+  font-family: var(--main);
+  border-radius: 5px;
+  font-size: 20px;
+}
+
+.panel-cancel-content > form > select,
+.panel-cancel-content > form > textarea {
+  background-color: transparent;
+  color: white;
+  border-radius: 2px;
+}
+
+#motivo > option {
+  color: black;
+  background-color: white;
+}
+
+#motivo,
+#comentarios,
+#comentarios:focus,
+#motivos:focus {
+  border-radius: 5px;
+  border: 1px solid white;
+}
+
+.panel-cancel-content > form > textarea {
+  height: 100px;
+}
+
+.panel-cancel-content > form > select > option:hover {
+  color: black;
 }
 
 /* Botones específicos */
@@ -994,34 +1046,53 @@ button:hover #clip {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
   gap: 40px;
   margin-top: 15px;
 }
 
 .cancel-buttons-div > button {
-  padding: 10px 15px;
-  color: black;
   border: none;
-  font-family: var(--second);
+  background-color: rgba(34, 34, 34, 0.27);
+  font-weight: bolder;
+  font-size: 1.5rem;
+  font-family: var(--main);
+  padding: 15px;
   cursor: pointer;
-  border-radius: 5px;
+  border-radius: 4px;
+}
+
+.btn-cancel-plan {
+  background-color: transparent;
+  cursor: pointer;
+  color: white;
+  font-weight: bolder;
+  font-family: var(--main);
+  font-size: 20px;
+}
+
+.btn-cancel-plan:hover {
+  color: red;
+}
+
+.btn-cancel-panel {
+  color: var(--greenFull3);
   font-weight: bold;
 }
+.btn-cancel-panel:hover {
+  color: var(--greenFull1);
+  background-color: black;
 
-.btn-cancel {
-  background-color: var(--greenFull2);
 }
 
-.btn-cancel:hover {
-  background-color: var(--greenFull4);
+.btn-confirm-panel {
+  font-weight: bold;
+  color: rgb(255, 86, 86);
 }
 
-.btn-confirm {
-  background-color: red;
-}
-
-.btn-confirm:hover {
-  background-color: rgb(255, 86, 86);
+.btn-confirm-panel:hover {
+  background-color: black;
+  color: red;
 }
 
 /* Mensajes de alerta centrados */
