--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -246,7 +246,7 @@ Videos IA{% endblock %} {% block content %}
             src="https://img.icons8.com/external-anggara-filled-outline-anggara-putra/32/external-subtitles-multimedia-anggara-filled-outline-anggara-putra-3.png"
             alt="external-subtitles-multimedia-anggara-filled-outline-anggara-putra-3"
           />
-          <p>subtitulos</p>
+          <p>Subtitulos</p>
         </span>
         <span id="btn-more-options" class="button-option-scripts">
           <!-- <i class="fa-solid fa-gears"></i> -->
@@ -522,7 +522,7 @@ Videos IA{% endblock %} {% block content %}
       </button>
       <!-- MODAL CON LAS OPCIONES DE VIDEO CONFIGURACION-->
       <div id="modal_GENERATE">
-        <div class="animate__animated animate__fadeInUp modal-options">
+        <div class="animate__animated animate__bounceInUp modal-options">
           <!-- <img
               src="{% static 'img/clipgen.ai logo.png' %}"
               alt="Logo dashboard"
