--- a/static/main/css/Dashboard/dashboard-styles.css
+++ b/static/main/css/Dashboard/dashboard-styles.css
@@ -45,13 +45,14 @@
 }
 
 .modal-options {
-  box-shadow: 1px 1px 5px 2px var(--greenFull3);
   z-index: 4999;
-  height: 80vh;
+  height: 90vh;
   width: 80vw;
   position: absolute;
-  bottom: 10%;
-  border-radius: 4px;
+  border: 5px double var(--borderInputs);
+  bottom: -5px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
   /* border-top: 1px solid var(--greenFull3);
   border-left: 1px solid var(--greenFull2);
   border-right: 3px solid var(--greenFull2);
@@ -284,6 +285,7 @@
   padding: 0 15px 15px 15px;
   border-radius: 5px;
   z-index: 4000;
+  border: 1px solid gold;
 }
 
 #container-options-generate-scripts.expanded {
@@ -337,6 +339,7 @@ border-bottom-right-radius: 10px;
 .button-option-scripts > p {
   font-size: 15px;
   font-family: var(--main);
+  font-weight: bold;
 }
 
 .label-user-dashboard {
@@ -457,13 +460,12 @@ input[type="file"][webkitdirectory]:hover::file-selector-button {
 
 .btn-outline-secondary {
   margin: 0 auto;
-  border: none;
+  border: 1px solid var(--borderInputs);
   border-radius: 4px;
   padding: 10px 0px;
   background: transparent;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
-  background-color: var(--blueBtns);
   font-weight: bold;
   color: white;
   width: 100%;
@@ -471,7 +473,8 @@ input[type="file"][webkitdirectory]:hover::file-selector-button {
 }
 
 .btn-outline-secondary:hover {
-  background-color: var(--blueBtns2);
+  background-color: var(--borderInputs);
+  box-shadow: 1px 1px 1px 1px var(--borderInputs);
 }
 
 #configForm,
