--- a/static/main/css/login.css
+++ b/static/main/css/login.css
@@ -1,18 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
-
-:root {
-  /* PALETA DE COLORES */
-  --greenFull1: #9df01a;
-  --greenFull2: #70e000;
-  --greenFull3: #38b000;
-  --blackPanel: rgb(22, 22, 22);
-
-  /* FONTS */
-  --main: "Nunito", serif;
-  --second: "Roboto", serif;
-}
-
 #login-section {
   position: fixed;
   z-index: 2001;
@@ -29,29 +14,25 @@
   backdrop-filter: blur(25px) saturate(180%);
   -webkit-backdrop-filter: blur(25px) saturate(180%);
   background-color: rgba(0, 0, 0, 0);
-  /* border: 1px solid red;
-  * {
-    border: 1px solid gold;
-  } */
+}
+.third-line {
+  margin-top: 7px;
+  display: flex;
+  gap: 10px;
+  p {
+    text-align: center;
+    font-weight: bold;
+  }
 
-  .third-line {
-    display: flex;
-    gap: 10px;
-    p {
-      text-align: center;
-      font-weight: bold;
-    }
+  a {
+    font-weight: bold;
+    color: var(--greenFull2);
+    transition: 0.1s;
+  }
 
-    a {
-      font-weight: bold;
-      color: var(--greenFull2);
-      transition: 0.1s;
-    }
-
-    a:hover {
-      transition: 0.1s;
-      color: var(--greenFull3);
-    }
+  a:hover {
+    transition: 0.1s;
+    color: var(--greenFull3);
   }
 }
 
@@ -66,19 +47,20 @@
 }
 
 #form-login {
-  /* border: 1px solid var(--greenFull4); */
+  box-shadow: 1px 1px 5px 2px rgb(11, 11, 11);
   border-radius: 10px;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   gap: 5px;
   width: 400px;
   position: relative;
   padding: 30px;
-  background-color: var(--blackPanel);
-  
+  background-color: black;
 }
 
-#form-login > h3 {
+#form-login > h2 {
   font-family: var(--main);
   font-weight: bold;
   font-size: 35px;
@@ -101,11 +83,13 @@
   right: 10px;
   top: 10px;
 }
+
 #icon-login-password:hover {
   color: var(--green3);
 }
 
 .input-type {
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 5px;
@@ -114,7 +98,6 @@
 .input-is {
   width: 100%;
   background-color: rgba(0, 0, 0, 0.48);
-  border: 1px solid var(--greenFull4);
   border-radius: 3px;
   padding: 0.5em;
   font-size: 1em;
@@ -122,10 +105,11 @@
   font-weight: bold;
   color: white;
   text-align: left;
+  border: 1px solid var(--borderInputs);
 }
 
-.input-is:focus{
-  border: none;
+.input-is:focus {
+  border: 1px solid gold;
 }
 
 .input-is::placeholder {
@@ -134,57 +118,33 @@
 }
 
 .submit-button {
+  position: relative;
   border: none;
-  width: 100%;
+  width: 190px;
   border-radius: 5px;
   padding: 0;
   background-color: white;
   color: black;
   transition: 0.2s;
-  padding: 10px 5px;
+  padding: 4px 15px;
   cursor: pointer;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
   font-family: var(--main);
-  font-weight: 400;
-  img {
-    width: 25px;
-  }
-}
-
-.submit-button:hover {
-  background-color: rgb(143, 143, 143);
-}
-
-.login-container2 {
-  display: flex;
-  flex-direction: column;
-  gap: 1em;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  border-radius: 15px;
-  background-color: var(--greenFull4);
-
-
-  
-}
-
-.login-container2 > img {
-  width: 300px;
-}
-
-
-.login-container2 > h1 {
-  font-weight: 4rem;
   font-weight: bold;
-  font-family: var(--main);
-  color: black;
+  text-align: right;
+  margin-top: 10px;
 }
 
-#link-to-login-register {
+.submit-button > img {
+  width: 35px;
+  position: absolute;
+  left: -10px;
+  top: -5px;
+}
+.submit-button:hover {
+  background-color: var(--greenFull2);
+}
+
+/* #link-to-login-register {
   color: var(--greenFull3);
   transition: 0.3s;
 }
@@ -192,4 +152,24 @@
 #link-to-login-register:hover {
   transition: 0.3s;
   color: var(--greenFull2);
+} */
+
+/* ESTILOS COMPARTIDOS CON REGISTER */
+#logo-auth-container {
+  position: absolute;
+  display: flex;
+  gap: 10px;
+  top: 10px;
+  left: 15px;
+}
+
+#logo-auth-container > img {
+  width: 50px;
+}
+#logo-auth-container > h1 {
+  font-family: var(--main);
+  -webkit-text-stroke: 2px black;
+  color: white;
+  font-size: 35px;
+  font-weight: bolder;
 }
