--- a/static/main/css/register.css
+++ b/static/main/css/register.css
@@ -13,27 +13,9 @@
   backdrop-filter: blur(25px) saturate(180%);
   -webkit-backdrop-filter: blur(25px) saturate(180%);
   background-color: rgba(0, 0, 0, 0);
-
-
-  div {
-    margin-top: 20px;
-
-    p {
-      text-align: center;
-      font-weight: bold;
-    }
-  }
 }
 
-#link-to-login-register {
-  color: var(--greenFull3);
-  transition: 0.3s;
-}
 
-#link-to-login-register:hover {
-  transition: 0.3s;
-  color: var(--greenFull2);
-}
 
 #close-modal-register {
   position: absolute;
@@ -45,43 +27,29 @@
   cursor: pointer;
 }
 
-form > h2 {
-  margin-bottom: 45px;
-  width: 100%;
-  text-align: center;
+#form-register {
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  gap: 5px;
+  width: 400px;
+  position: relative;
+  padding: 30px;
+  background-color: black;
+}
+
+#form-register > h2 {
   font-family: var(--main);
-}
-
-form > input,
-form > label > input {
-  width: 100%;
-  background-color: rgba(0, 0, 0, 0.48);
-  border: 1px solid var(--greenFull4);
-  border-radius: 3px;
-  padding: 0.5em;
-  font-size: 1em;
-  font-family: var(--second);
-  font-weight: 400;
-  color: white;
   font-weight: bold;
-  text-align: left;
-  margin-bottom: 10px;
-  outline: none;
-}
-
-input::placeholder,
-form > label > input::placeholder {
+  font-size: 35px;
   color: white;
-  font-weight: 300; 
+  margin-bottom: 25px;
 }
 
-input:focus,
-form > label > input:focus {
-  outline: none;
-  border: none;
-}
 
-form > label {
+#form-register > .input-type > label {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -89,12 +57,13 @@ form > label {
   position: relative;
 }
 
-form > label > div {
+#icon-password1,
+#icon-password2 {
   cursor: pointer;
   margin: 0;
   position: absolute;
   right: 10px;
-  top: -10px;
+  top: 10px;
 }
 
 #icon-password1:hover,
