--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -67,7 +67,7 @@
     <!-- NEW NAVBAR -->
 
     <!-- HERO SECTION -->
-    <!-- <section class="hero">
+    <section class="hero">
       <div id="content-hero">
         <span id="title-hero" class="animate__animated animate__backInDown">
           Automatizá tus videos.
@@ -80,7 +80,7 @@
       <a id="link-hero" href="/index" class="animate__animated animate__bounce"
         >Prueba ClipgenAI</a
       >
-    </section> -->
+    </section>
     <!-- HERO SECTION -->
 
     <!-- BENEFITS SECTION -->
@@ -123,6 +123,10 @@
       <span id="close-modal-login" onclick="showLogin()"
         ><i class="fa-solid fa-xmark"></i
       ></span>
+      <a id="logo-auth-container" href="#">
+        <img src="{% static 'img/clipgen.ai logo.png' %}" alt="Logo" />
+        <h1>Clipgen Ai</h1>
+      </a>
       <form id="form-login" action="" method="POST">
         <h2>Comencemos</h2>
         {% csrf_token %}
@@ -146,7 +150,14 @@
             <div id="icon-login-password"><i class="fa-solid fa-eye"></i></div>
           </label>
         </div>
-        <button class="submit-button" type="submit">Iniciar Sesión</button>
+        <button class="submit-button" type="submit">
+          <img
+            width="35"
+            height="35"
+            src="https://img.icons8.com/fluency/48/enter-2.png"
+            alt="enter-2"
+          />Iniciar Sesión
+        </button>
         <button class="submit-button">
           <img src="{% static 'img/icon-google.png' %}" alt="" />Continuar con
           Google
@@ -169,35 +180,63 @@
       <span id="close-modal-register" onclick="showRegister()"
         ><i class="fa-solid fa-xmark"></i
       ></span>
-      <form id="form-login" method="POST">
+
+      <a id="logo-auth-container" href="#">
+        <img src="{% static 'img/clipgen.ai logo.png' %}" alt="Logo" />
+        <h1>Clipgen Ai</h1>
+      </a>
+
+      <form id="form-register" method="POST">
         <h2>Crear cuenta</h2>
-        <input type="text" name="username" placeholder="Nombre de usuario" />
-        <input type="email" name="email" placeholder="Correo electrónico" />
-        <label>
+        <div class="input-type">
           <input
-            id="password1"
-            type="password"
-            name="password"
-            placeholder="Contraseña"
+            class="input-is"
+            type="text"
+            name="username"
+            placeholder="Nombre de usuario"
           />
-          <div id="icon-password1"><i class="fa-solid fa-eye"></i></div>
-        </label>
-        <label>
           <input
-            id="password2"
-            type="password"
-            name="password2"
-            placeholder="Repetir contraseña"
+            class="input-is"
+            type="email"
+            name="email"
+            placeholder="Correo electrónico"
           />
-          <div id="icon-password2"><i class="fa-solid fa-eye"></i></div>
-        </label>
-        <button class="submit-button" type="submit">Registrarse</button>
+          <label>
+            <input
+              class="input-is"
+              id="password1"
+              type="password"
+              name="password"
+              placeholder="Contraseña"
+            />
+            <div id="icon-password1"><i class="fa-solid fa-eye"></i></div>
+          </label>
+          <label>
+            <input
+              class="input-is"
+              id="password2"
+              type="password"
+              name="password2"
+              placeholder="Repetir contraseña"
+            />
+            <div id="icon-password2"><i class="fa-solid fa-eye"></i></div>
+          </label>
+        </div>
+
+        <button class="submit-button" type="submit">
+          <img
+            width="35"
+            height="35"
+            src="https://img.icons8.com/fluency/48/enter-2.png"
+            alt="enter-2"
+          />Registrarse
+        </button>
         <button class="submit-button">
           <img src="{% static 'img/icon-google.png' %}" alt="" />Continuar con
           Google
         </button>
       </form>
-      <div>
+      <div class="third-line">
         <p>
           ¿Ya tienes una cuenta?
           <a id="link-to-login-register" onclick="registerToLogin()"
